Shortened walls of text

--- a/Slides Annual Review 2019/annurev.tex
+++ b/Slides Annual Review 2019/annurev.tex
@@ -21,15 +21,15 @@
 
 \begin{frame}{The problem}
   \begin{itemize}
-  	\item Focus on modern windfarms in the North Sea, relatively far from the coast, 100+ wind turbines, lifespan of about 20-30 years, costs of installation in range of \pounds 100 million or higher
+  	\item Focus on modern windfarms in the North Sea
   	\item Optimize logistics of operations on offshore windfarms (OWFs) in each phase of the life-cycle:
   	\begin{itemize}
   		\item Installation
   		\item Maintenance
   		\item Decommission
   	\end{itemize}
-  	\item Logisitical descisions consists of layout, vessel scheduling, routing, number and types of vessels
-  	\item Small optimisations can have significant effects on costs, as vessels can cost upwards of \pounds 100,000 per day
+  	\item Various logistical decisions come into play
+  	\item Small optimisations can have significant effects on costs
   	\item Methods used are optimisation and simulation
   \end{itemize}
 \end{frame}
@@ -37,11 +37,11 @@
 
 \begin{frame}{Key challenges}
   \begin{itemize}
-  	\item Long lead-up times for many decisions means no last-minute scheduling
-  	\item Maritime weather conditions can be unpredictable
-  	\item Looking at the whole life-cycle includes a lot of different types of decisions
-  	\item Location-specific circumstances can have a big effect on weather conditions and duration of tasks
-  	\item Phases are not independent, maintenance starts at the same time installation starts
+  	\item Long lead-up times
+  	\item Strong maritime weather
+  	\item Many different types of decisions
+  	\item Differences between locations
+  	\item Phases are not independent
   \end{itemize}
 \end{frame}
 
@@ -115,7 +115,7 @@
   	\item Develop full models for each stage of the life-cycle
   	\item Determine specific interactions between the stages
   	\item Implement models in the tool, develop it further for full commercial functionality
-  	\item Validate and test the tool (and underlying models) using real data
+  	\item Validate and test the tool (and underlying models) using real(istic) data
   \end{itemize}
 \end{frame}
 
