Updated slides, moved onto report version 0.4, added RM essay

--- a/Slides Annual Review 2019/annurev.tex
+++ b/Slides Annual Review 2019/annurev.tex
@@ -7,9 +7,12 @@
 %\usetheme{Warsaw}
 \usetheme{Copenhagen}
 
+%\setbeamertemplate{footline}[frame number]{}
+\setbeamertemplate{navigation symbols}{\insertframenumber/\inserttotalframenumber}
+
 \title[Logistical Optimisation for Offshore Windfarms]{Simulation and Optimisation of Offshore Renewable Energy Arrays for Minimal Life-Cycle Costs}
 
-\author{R. Kuipers}
+\author{Robin Kuipers}
 
 \date{November 12, 2019}
 
@@ -115,6 +118,11 @@
   	\item Implement models in the tool, develop it further for full commercial functionality
   	\item Validate and test the tool (and underlying models) using real(istic) data
   \end{itemize}
+  \pause
+  \bigskip
+  \begin{center}
+  Thank you for listening, any questions?
+  \end{center}
 \end{frame}
 
 \end{document}
