--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -94,23 +94,24 @@ In this report I will talk about my progress and what I have learned over the pa
 \pagebreak
 
 \section{The project} \label{s:project}
-In this section I will attempt to summarise the different aspects I have seen on the project, in enough detail for the reader to understand the rest of the report, and understand the goals I am working towards.
+In this section I will describe my research project in more detail, and discuss the questions I aim to answer by the end of it. This should provide ample context for the rest of the report. 
 
 My project is about optimising all sorts of logistical decisions regarding offshore energy sites, primarily windfarms. This includes supply chains, routing, design of the windfarm, and scheduling of the operations to be done on the windfarm. The latter is where my primary focus lies, and what the majority of this report will be about. 
 
 \subsection{Logistical decisions on offshore windfarms} \label{ss:logdec}
-A typical offshore windfarm (OWF) will have two types of structures: Wind Turbine Generators (WTGs) and Offshore Substation Platforms (OSPs). The WTGs are the actual turbines generating energy, and the OSPs are hubs where the power generated in the WTGs is gathered and transformed before being transported to shore. Between these structures are many cables, connecting the WTGs to the OSPs, generally with a number of sets of WTGs connected serially. Then from each OSP there are specialized cables back to shore. A typical OWF currently in development might have upwards of 100 WTGs and 2 OSPs \cite{ruk2017,barlow2018mixed}. 
+The type of offwhore windfarm (OWF) this research project will focus on is described in \cite{barlow2018mixed}. A typical windfarm of this type will have two types of structures: Wind Turbine Generators (WTGs) and Offshore Substation Platforms (OSPs). The WTGs are the actual turbines generating energy, and the OSPs are hubs where the power generated in the WTGs is gathered and transformed before being transported to shore. Between these structures are many cables, connecting the WTGs to the OSPs, generally with a number of sets of WTGs connected serially. Then from each OSP there are specialized cables back to shore. A typical OWF currently in development might have upwards of 100 WTGs and 2 OSPs \cite{ruk2017}. 
 
-The life-cycle of an OWF can be broken up into three phases: installation, maintenance and decommissioning. Installation and decommissioning are similar in structure; a fixed set of tasks needs to be completed in a cost effective way. The primary difference is the reversed order of the tasks. For each of the structures there is a set of tasks that need to be completed in series for each individual structure, such as (for installation): preparing the sea surface, laying the foundation, installing the structure and laying the cables (each of these tasks may be split into more tasks such as loading, transport and installation) \cite{kerkhove2017optimised}. Within the group of tasks for a structure, most tasks will have to be performed in a specific order, while the tasks for separate structures can be completed in any order. This is essential for some of the more sophisticated objective functions used in the literature; if one OSP and a set of WTGs connected to it are active, they can start generating power while the rest of the wind farm is still under construction \cite{barlow2017using}. This is often a contractual requirement imposed by the government, and it would also mean the farm starts making money significantly earlier, and can therefore have significant impacts on desired schedules. In some situations the company might even have contractually or legally enforced deadlines for certain milestones, like 10\% or 50\% of the WTGs being operational. 
+The life-cycle of an OWF can be broken up into three phases: installation, maintenance and decommissioning. Installation and decommissioning are similar in structure; a fixed set of tasks needs to be completed in a cost-effective way. The primary difference is the reversed order of the tasks. For each of the structures there is a set of tasks that need to be completed in series for each individual structure, such as (for installation): preparing the sea surface, laying the foundation, installing the structure and laying the cables (each of these tasks may be split into more tasks such as loading, transport and installation) \cite{kerkhove2017optimised}. Within the group of tasks for a structure, most tasks will have to be performed in a specific order, while the tasks for separate structures can be completed in any order. This is essential for some of the more sophisticated objective functions used in the literature; if one OSP and a set of WTGs connected to it are active, they can start generating power while the rest of the wind farm is still under construction \cite{barlow2017using}. This is often a contractual requirement imposed by the government, and it would also mean the farm starts making money significantly earlier, and can therefore have significant impacts on desired schedules. This can lead to contractually or legally enforced deadlines for certain milestones, like 10\% or 50\% of the WTGs being operational.
 
-The structure of maintenance projects is completely different. The set of tasks in not fixed, ideally maintenance would only be performed the day before an asset was about to fail. However, this is impossible to predict, and due to long lead up times of renting maintenance vessels waiting for an asset to fail will cause long periods of downtime. Scheduling maintenance has to be done significantly in advance. It is also costly, meaning maintenance trips which would have been unnecessary are undesirable as well. These two factors mean a balance needs to be struck between not spending too much on maintenance, and maintaining high uptime on the structures of the site (especially OSPs being offline can lead to massive losses in profit). 
+The structure of maintenance projects is completely different. The set of tasks in not fixed, ideally maintenance would only be performed right before an asset was about to fail. However, this is impossible to predict, and due to long lead up times of renting maintenance vessels waiting for an asset to fail will cause long periods of downtime. Scheduling maintenance has to be done significantly in advance. It is also costly, meaning maintenance trips which would have been unnecessary are undesirable as well. These two factors mean an efficient maintenance policy needs to find a balance between not spending too much on maintenance, and maintaining high uptime on the structures of the site (especially OSPs being offline can lead to massive losses in profit). 
 
-The stochastic nature of the project also comes with various challenges. Naively one would perhaps go for the schedule with the lowest expected cost or the earlier expected end time. But the specific goal depends on the wishes of the executing company and project details. For example, some company may want at least 95\% certainty that the project is complete (or complete up to some milestone) by a given deadline, or some certainty that the costs do not exceed a given threshold. Therefore the probability distribution of the cost and duration of a resulting schedule are important to determining the value of that schedule. Additionally it is worth noting that while the end time of a schedule and the cost are strongly related, there are scenarios in which it is more profitable to halt the operations for a number of months, especially the winter months where there will be more days with weather too extreme to perform operations in. While this break would obviously postpone the total completion of the schedule, not having to pay rent for vessels over these months in which they cannot perform optimally might lead to a higher net profit over all, especially if a part of the windfarm is already operational and generating energy over these months. 
+%TODO: Possibly add something about subjectivity, and the goal not being finding a `perfect' schedule but a number of candidate schedules
+The stochastic nature of the project also comes with various challenges. Naively one would perhaps go for the schedule with the lowest expected cost or the earlier expected end time. But the specific goal depends on the wishes of the executing company and project details. For example, a company may want at least 95\% certainty that the project is complete (or complete up to some milestone) by a given deadline, or some certainty that the costs do not exceed a given threshold. Therefore the probability distribution of the cost and duration of a resulting schedule are important to determining the value of that schedule. Additionally it is worth noting that while the end time of a schedule and the cost are strongly related, there are scenarios in which it is more profitable to halt the operations for a number of months, especially the winter months where there will be more days with weather too extreme to perform operations in. While this break would obviously postpone the total completion of the schedule, not having to pay rent for vessels over these months in which they cannot perform optimally might lead to a higher net profit over all, especially if a part of the windfarm is already operational and generating energy over these months. In this way, schedules need to be determined on various levels; there are day-to-day decisions, and much larger decisions regarding operational periods. 
 
 %TODO: For the cites, look at sources and where they got it from; citing directly leads me to more (varied) sources
 
 \subsection{This research project} \label{ss:objs}
-The primary goal of this project is to look at the entire life-cycle of OWFs, and how decisions near the start of this life-cycle impact the situation down the line. Specifically I aim to use both optimisation and simulation to provide insight into logistical decisions, primarily scheduling, but potentially also layout of the site and the routing on it. The latter two are very challenging subjects on their own, and I will likely only run simplistic experiments with them, to see whether looking at a full life-cycle gives any insights on its own.
+The primary goal of this project is to look at the entire life-cycle of OWFs, and how decisions at different points in this life-cycle impact the situation at different points in time. Specifically I aim to use both optimisation and simulation to provide insight into logistical decisions, primarily scheduling, but potentially also layout of the site and the routing on it. The latter two are very challenging subjects on their own, and I will likely only run simplistic experiments with them, to see whether looking at a full life-cycle gives any insights on its own.
 
 Over the past year, I have spent most of my time reading up on the subject, both the methods and the challenges of offshore projects. This literature is summed up in \Cref{s:lit}. Additionally I have been laying the groundwork for a simulator which I am planning to turn into a tool for support on the logistical decisions described previously. Details on this tool are given in \Cref{s:sim}.
 
