Wrote more motivation, and fixed spelling

--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -340,9 +340,14 @@
   publisher={Springer}
 }
 
-@article{leontarisprobabilistic,
-  title={Probabilistic decision support for offshore wind operations},
-  author={Leontaris, Georgios and Morales-N{\'a}poles, Oswaldo and Wolfert, ARM Rogier}
+@article{leontaris2016probabilistic,
+  title={Probabilistic scheduling of offshore operations using copula based environmental time series--An application for cable installation management for offshore wind farms},
+  author={Leontaris, Georgios and Morales-N{\'a}poles, Oswaldo and Wolfert, ARM Rogier},
+  journal={Ocean Engineering},
+  volume={125},
+  pages={328--341},
+  year={2016},
+  publisher={Elsevier}
 }
 
 @article{leontaris2019decision,
