Updated research question talk

--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -130,7 +130,9 @@ The primary motivation for this objective is that in the literature the three ph
 
 For the first type of interaction it is important to consider that the maintenance phase overlaps with both other phases for some amount of time. Once the first set of wind turbines has been fully installed they start producing energy and might require maintenance. It may be beneficial to use the same vessels to install the remaining wind turbines and perform maintenance, or have separate vessels that still use the same ports and have to consider the routing of the installation vessels. The same thing happens at the end of the life cycle; when decommission starts specific wind turbines are decommissioned while others continue to produce energy. 
 
-The second type of interaction stems from any event in the life-cycle of a wind turbine (or the entire farm) can affect any event after it, regardless of which phase these events are part of. The order in which the turbines are installed determines their age, and affects their expected failure rate when maintenance starts on them. In a more extensive way, any failures and repairs during the maintenance phase influence which wind turbines are most likely to fail again, and therefore which are most efficient to decommission first. With that in mind it is clear that decommission is the phase which relies most heavily on what happens before it, which may be one of the reasons why it has been studied less than the other two phases. This type of interaction means simulating the early stages of the life-cycle of the windfarm might lead to more accurate and realistic knowledge to base decisions in the later stages of the life-cycle on. Potentially early decisions might even be affected by the long-term effect they have. 
+The second type of interaction stems from any event in the life-cycle of a wind turbine (or the entire farm) can affect any event after it, regardless of which phase these events are part of. The order in which the turbines are installed determines their age, and affects their expected failure rate when maintenance starts on them. In a more extensive way, any failures and repairs during the maintenance phase influence which wind turbines are most likely to fail again, and therefore which are most efficient to decommission first. With that in mind it is clear that decommission is the phase which relies most heavily on what happens before it, which may be one of the reasons why it has been studied less than the other two phases. This type of interaction means simulating the early stages of the life-cycle of the windfarm might lead to more accurate and realistic knowledge to base decisions in the later stages of the life-cycle on. For example, basing the order in which turbines are decommissioned on their actual history of failures and reparations is expected to lead to better result than a predetermined arbitrary order. 
+
+This interaction works in the other direction as well. Instead of the history of the windfarm influencing decisions near the end of the life-cycle, the future of the windfarm can also influence later decisions. For example, if we compare two installation schedules and base our choice solely on a measurement done during the installation phase (such as the date the installation finishes, or the cost at time of finishing) this could potentially lead to another option than if we look at the entire life-cycle. Non-operational periods are times of the year (usually winter months) in which no installation operations are performed on the site due to the severe weather conditions. Using periods like this leads to age differences between turbines being bigger, which might potentially have significant effects on the maintenance and decommission phases. These long-term effects of decisions can only be explored when the entire life-cycle is considered, and could lead to an installation schedule which performs well in the short term performing worse when considering longer time frames. 
 
 Through these interactions we state three sub-questions for the above research question:
 
