--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -151,6 +151,8 @@ Can simulating the entire life-cycle of a windfarm provide useful data to base l
 Can considering the long-term effects of logistical decisions early on in the life-cycle of a windfarm improve these decisions. 
 \end{restatable}
 
+While the latter two questions seem similar, they approach the same phenomenon from different perspectives. This will likely lead to different techniques and models being used to answer them. 
+
 \iffalse
 
 The explicit research objective is: 
